--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,8 @@
 Flask>=2.0
 beautifulsoup4>=4.9.0
 lxml>=4.6.0
-Flask-CORS>=3.0.0 
+Flask-CORS>=3.0.0
+# For LLM API calls
+requests
+# For loading .env file during development
+python-dotenv 
